--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -4653,13 +4653,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "718192dc-3123-4958-a3b6-46379f52e9dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     date  Temperature  Humidity  Light         CO2  \\\n",
+      "0     2015-02-04 17:51:00        23.18   27.2720  426.0  721.250000   \n",
+      "1     2015-02-04 17:51:59        23.15   27.2675  429.5  714.000000   \n",
+      "2     2015-02-04 17:53:00        23.15   27.2450  426.0  713.500000   \n",
+      "3     2015-02-04 17:54:00        23.15   27.2000  426.0  708.250000   \n",
+      "4     2015-02-04 17:55:00        23.10   27.2000  426.0  704.500000   \n",
+      "...                   ...          ...       ...    ...         ...   \n",
+      "8138  2015-02-10 09:29:00        21.05   36.0975  433.0  787.250000   \n",
+      "8139  2015-02-10 09:29:59        21.05   35.9950  433.0  789.500000   \n",
+      "8140  2015-02-10 09:30:59        21.10   36.0950  433.0  798.500000   \n",
+      "8141  2015-02-10 09:32:00        21.10   36.2600  433.0  820.333333   \n",
+      "8142  2015-02-10 09:33:00        21.10   36.2000  447.0  821.000000   \n",
+      "\n",
+      "      HumidityRatio  Occupancy  \n",
+      "0          0.004793          1  \n",
+      "1          0.004783          1  \n",
+      "2          0.004779          1  \n",
+      "3          0.004772          1  \n",
+      "4          0.004757          1  \n",
+      "...             ...        ...  \n",
+      "8138       0.005579          1  \n",
+      "8139       0.005563          1  \n",
+      "8140       0.005596          1  \n",
+      "8141       0.005621          1  \n",
+      "8142       0.005612          1  \n",
+      "\n",
+      "[8143 rows x 7 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "#si-exercise"
+    "#si-exercise\n",
+    "\n",
+    "# Import pandas library\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Import the data into a DataFrame called `occupancy`\n",
+    "occupancy = pd.read_csv(\"https://github.com/dustywhite7/pythonMikkeli/raw/master/exampleData/roomOccupancy.csv\")\n",
+    "\n",
+    "# Convert timestamps to datetime format\n",
+    "occupancy[\"date\"] = pd.to_datetime(occupancy[\"date\"])\n",
+    "\n",
+    "# Extract day of week, hour, and minute\n",
+    "occupancy[\"day_of_week\"] = occupancy[\"date\"].dt.day_name()\n",
+    "occupancy[\"hour\"] = occupancy[\"date\"].dt.hour\n",
+    "occupancy[\"minute\"] = occupancy[\"date\"].dt.minute\n",
+    "\n",
+    "# Create `bright` column\n",
+    "light_avg = occupancy[\"Light\"].mean()\n",
+    "occupancy[\"bright\"] = occupancy[\"Light\"].map(lambda x: 1 if x > light_avg else 0)\n",
+    "\n",
+    "# Create `steamy` column\n",
+    "humidity_avg = occupancy[\"Humidity\"].mean()\n",
+    "temperature_avg = occupancy[\"Temperature\"].mean()\n",
+    "occupancy[\"steamy\"] = (\n",
+    "    (occupancy[\"Humidity\"] > humidity_avg) & (occupancy[\"Temperature\"] > temperature_avg)\n",
+    ").astype(int)\n",
+    "\n",
+    "# Display the first few rows to verify\n",
+    "occupancy.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3126eb6-d3ea-4e18-8685-ae000c20a7b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -4678,7 +4748,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
